<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6CC4A1"
    tools:context=".MainUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/UserAvatar"
                android:layout_width="160dp"
                android:layout_height="149dp"
                android:contentDescription="@string/AvatarDescription"
                app:srcCompat="@drawable/monopolycloud" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/PlayerId"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/PlayerIdText"
                android:textSize="30sp" />

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/MoneyValue"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="30sp"
                android:text="@string/DefaultMoney"/>

            <EditText
                android:id="@+id/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:autofillHints="true"
                android:hint="@string/EditTextFieldText"
                android:inputType="number" />

            <Button
                android:id="@+id/AddButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/AddButtonText" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/SubtractButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/SubtractButtonText" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/GoToMainMenu"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/GoToMainMenu" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>